--- a/bookmarklets.html
+++ b/bookmarklets.html
@@ -47,7 +47,7 @@
     </nav>
 
     <div class="content">
-        <h1 class="glowing-text">BrunysIXL</h1>
+        <h1 class="glowing-text">Ruby arcade</h1>
         <h5>Our Bookmarklets Using JS in real time!</h5>
 	<hr>
 	
