--- a/partners.html
+++ b/partners.html
@@ -47,7 +47,7 @@
     </nav>
 
     <div class="content">
-        <h1 class="glowing-text">BrunysIXL</h1>
+        <h1 class="glowing-text">Ruby arcade</h1>
         <h5>Our Awesome Sauce Partners!</h5>
 	<hr>
 	
